sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:16: error: unclosed comment
/*Faire
^AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() {
^